# sparse_array

./: Cargo.toml  README.md  make-plots.sh  make_plots.py  select.json  test_harness.py
results/: out-2.json  out.json  select.json
runs/rank-support-dynamic-block-size/: run-01.json  run-02.json  run-03.json
runs/rank-support-fixed-block-size/: run-01.json  run-02.json  run-03.json
runs/select-support-dynamic-block-size/: run-01.json  run-02.json  run-03.json
runs/select-support-fixed-block-size/: run-01.json  run-02.json  run-03.json
runs/sparse-array-get-at-index-vary-by-length/: run-01.json  run-02.json  run-03.json
runs/sparse-array-get-at-index-vary-by-sparsity/: run-01.json  run-02.json  run-03.json
runs/sparse-array-get-index-of-vary-by-length/: run-01.json  run-02.json  run-03.json
runs/sparse-array-get-index-of-vary-by-sparsity/: run-01.json  run-02.json  run-03.json
src/: args.rs  binary_search.rs  cli.rs  experiment.rs  lib.rs  main.rs  math.rs  rank_support.rs  select_support.rs  serial.rs  sparse_array.rs
