[package]
name = "sparse_array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.8", features = ["derive"] }
eyre = "0.6.8"
rand = "0.8.5"
serde = { version = "1.0.156", features = ["derive", "rc"] }
serde_json = "1.0.94"
sucds = "0.6.0"
